# Qt-demo

./: .gitignore  License  README.md
.github/workflows/: sync.yml
serialport/: CMakeLists.txt  README.md  main.cpp  serialport.pro  widget.cpp  widget.h  widget.ui
serialport/serial/: serialmanager.cpp  serialmanager.h  serialworker.cpp  serialworker.h
